# GPU-Training-OOM-Reduction---RTX-Memory-Fragmentation-Lab

./: .editorconfig  BLUEPRINT.md  Benchmarks.md  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_BADGES_PATCH.md  RESULTS.md  SECURITY.md  TECHNICAL_REPORT.md  benchmarks.md  config.yaml  cov_check.txt  cov_check_2.txt  cov_check_3.txt  cov_full.txt  pyproject.toml  refactor_script.py  run.py  run_benchmark.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
benchmark/: run_with_defrag.py
benchmarks/: __init__.py  compare.py  evaluate.py  model_fragmentation.py  oom_bench.py  plot_results.py  run_baseline.py  run_local_benchmark.py  run_with_defrag.py  serious_evaluate.py  simulate_oom_behavior.py
dashboard/: README.md
dashboard/public/live/: baseline.json  comparison.json  defrag.json  live_telemetry.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: FragmentationChart.jsx  IterationTimeChart.jsx  Panel13_Benchmarking.jsx  Panel9_LatencyBarGraph.jsx
dashboard/src/data/: defrag.json
dashboard/src/utils/: dataLoader.js
data/traces/: gpt2_trace.parquet
docs/: design.md
examples/: train_toy_model.py
gpudefrag/: api.py  cli.py  dashboard.py  predictor.py  utils.py
gpudefrag/defrag_engine/: benchmark_triton.py  defragmenter.py  kernels.py
gpudefrag/llm_system/: kv_cache_manager.py
gpudefrag/scheduler/: monitor.py  predictor.py
gpudefrag/trainer/: _models.py  ddp.py  training_hook.py
notebooks/: Exploratory_Analysis.ipynb
results/: benchmark_infra_results.json  benchmark_infra_summary.csv  comparison.json  defrag.json  eval_log.csv  live_telemetry.json  live_telemetry.tmp.json  run_1.json  run_2.json  run_3.json  run_4.json  run_5.json  simulated_modeling.json  simulated_modeling_aggressive.json  simulated_modeling_llama.json  simulated_modeling_values.json  summary.csv  tmp64e96sh1  tmpc6clib21  tmpf4bisbpv  tmplt_5hu5b  training_metrics.json
scripts/: business_ml_pipeline.py  collect_real_traces.py  enterprise_hub_telemetry.py  generate_large_dataset.py  generate_sample_traces.py  live_demo.py  stress_test.py  train_ddp.py  train_senior_predictor.py  workload_simulator.py
src/apex_aegis/: __init__.py  api.py  cli.py  dashboard.py  utils.py
src/apex_aegis/api/: main.py
src/apex_aegis/defrag/: compaction_kernels.py
src/apex_aegis/defrag_engine/: __init__.py  benchmark_triton.py  compactor.py  defragmenter.py  kernels.py  policy.py
src/apex_aegis/llm_system/: kv_cache_manager.py
src/apex_aegis/optimization/: quantization.py
src/apex_aegis/predictor/: model.py
src/apex_aegis/profiler/: __init__.py  allocator_logger.py  collector.py
src/apex_aegis/scheduler/: __init__.py  dataset.py  monitor.py  predictor.py  risk_model.py
src/apex_aegis/trainer/: __init__.py  _models.py  auto_instrument.py  callback.py  ddp.py  trainer.py  training_hook.py
tests/: conftest.py  test_100pct_coverage.py  test_allocator_logger_final.py  test_api.py  test_api_hardened.py  test_api_hardened_expansion.py  test_auto_instrument.py  test_callback_hardened.py  test_cli.py  test_cli_coverage.py  test_cli_deep.py  test_cli_full.py  test_cli_hardened.py  test_collector.py  test_collector_hardened.py  test_compactor.py  test_compactor_hardened.py  test_coverage_final.py  test_dashboard_hardened.py  test_dashboard_manager.py  test_dataset.py  test_dataset_final.py  test_ddp_hardened.py  test_defragmenter.py  test_defragmenter_final.py  test_defragmenter_mocked.py  test_hook.py  test_kernels.py  test_kernels_body.py  test_kv_cache.py  test_kv_cache_final.py  test_logger.py  test_models.py  test_monitor.py  test_monitor_deep.py  test_monitor_final.py  test_monitor_hardened.py  test_policy.py  test_policy_final.py  test_predictor.py  (+4 more)
